[Satya]Add : Checking if the data of the two Records ate match

--- a/IndianStatesCensusAnalyser_Problem/IndianStatesCensusAnalyser_Problem.csproj
+++ b/IndianStatesCensusAnalyser_Problem/IndianStatesCensusAnalyser_Problem.csproj
@@ -68,10 +68,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSV_Census.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateCensusAnalyser.cs" />
     <Compile Include="StateCensusData.cs" />
+    <Compile Include="StateCensusException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
