[Satya]Add : Matching the two files records

--- a/IndianStatesCensusAnalyser_Problem/IndianStatesCensusAnalyser_Problem.csproj
+++ b/IndianStatesCensusAnalyser_Problem/IndianStatesCensusAnalyser_Problem.csproj
@@ -76,6 +76,7 @@
     <Compile Include="StateCensusAnalyser.cs" />
     <Compile Include="StateCensusData.cs" />
     <Compile Include="StateCensusException.cs" />
+    <Compile Include="StateCodeAnalyser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
